--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
